# This file is automatically created from a template by Tito.
# To edit this file manually, see '.tito/templates/Cargo.toml' instead.

[package]
name = "podmod"
description = "Containerized build system for kernel modules on Fedora."
keywords = ["linux", "kernel-module", "fedora", "podman", "silverblue"]
categories = ["command-line-utilities"]
license = "GPL-2.0-or-later"
authors = ["Alpin H. Gencer <ah@gencer.us>"]

version = "0.3.4"
edition = "2021"

repository = "https://github.com/ahgencer/podmod"
readme = "README.md"

exclude = [
    ".editorconfig",
    ".gitattributes",
    ".gitignore",
]

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
nix = "0.24.2"
