# This file is automatically created from a template by Tito.
# To edit this file manually, see '.tito/templates/Cargo.toml' instead.

[package]
name = "podmod"
version = "$version"
edition = "2021"
description = "Containerized build system for kernel modules on Fedora."
license = "GPL-2.0-or-later"

[dependencies]
